# calculator

./: 0001-improve-calculation-accuracy.patch  CMakeLists.txt  Makefile  calculator.cpp  calculator.h  clean_directory.sh  main.cpp  open_terminal.sh
patches/: 0001-formatting-use-tabs-instead-of-spaces.patch
